src/main/java/com/example/ReservationAppBackEnd/error/NotFoundException.java
package com.example.ReservationAppBackEnd.error;

public class NotFoundException extends RuntimeException {
    public NotFoundException(String message) {
        super(message);
    }
}
